@@ -101,6 +101,9 @@ GCRYPT_1.6 {
     gcry_mpi_ec_dup; gcry_mpi_ec_add; gcry_mpi_ec_mul;
     gcry_mpi_ec_curve_point;
 
+    gcry_log_debug;
+    gcry_log_debughex; gcry_log_debugmpi; gcry_log_debugpnt; gcry_log_debugsxp;
+
     _gcry_mpi_get_const;
 
     gcry_ctx_release;
